--- a/src/AutoLazer.App/wwwroot/css/site.css
+++ b/src/AutoLazer.App/wwwroot/css/site.css
@@ -1,123 +1,88 @@
-﻿@import url('open-iconic/font/css/open-iconic-bootstrap.min.css');
+/* 
+Site css for AutoLazer 
+By Adam Renaud
+Created 2018-12-22
+*/
 
-html, body {
-    font-family: 'Helvetica Neue', Helvetica, Arial, sans-serif;
+/* Import my favorite font from google fonts */
+@import url('https://fonts.googleapis.com/css?family=Roboto|Roboto+Mono');
+
+/* setting the html to font size 100% for em and rem */
+html {
+    font-size: 100%
 }
 
-app {
-    position: relative;
-    display: flex;
-    flex-direction: column;
+/* The body of the html page */
+body {
+    font-family: "Roboto", sans-serif;
+    margin: 0;
+    box-sizing: border-box;
 }
 
-.top-row {
-    height: 3.5rem;
-    display: flex;
-    align-items: center;
+a {
+    text-decoration: none;
+    color: inherit;
 }
 
-.main {
-    flex: 1;
+/* The main layout container */
+.main-layout-container {
+    display: grid;
+    grid-template-rows: auto auto;
+    grid-template-columns: 10% 80% 10%;
+    grid-template-areas: 
+        "navbar navbar navbar"
+        ". body .";
 }
 
-    .main .top-row {
-        background-color: #e6e6e6;
-        border-bottom: 1px solid #d6d5d5;
-    }
+/* Container for the navbar component */
+.navbar-container {
+    background-color: #f5f5f5;
+    border-bottom: 1px solid #8f8f8f;
 
-.sidebar {
-    background-image: linear-gradient(180deg, rgb(5, 39, 103) 0%, #3a0647 70%);
+    /* box-shadow: none|h-offset v-offset blur spread color |inset|initial|inherit; */
+    box-shadow: 0 1px 3px 1px #888888;
 }
 
-    .sidebar .top-row {
-        background-color: rgba(0,0,0,0.4);
-    }
-
-    .sidebar .navbar-brand {
-        font-size: 1.1rem;
-    }
-
-    .sidebar .oi {
-        width: 2rem;
-        font-size: 1.1rem;
-        vertical-align: text-top;
-        top: -2px;
-    }
-
-.nav-item {
-    font-size: 0.9rem;
-    padding-bottom: 0.5rem;
+/* Style for the links in the nav container */
+.navbar-container a {
+    margin: 0 1em 0 1em;
+    font-size: 1.3em;
 }
 
-    .nav-item:first-of-type {
-        padding-top: 1rem;
-    }
-
-    .nav-item:last-of-type {
-        padding-bottom: 1rem;
-    }
-
-    .nav-item a {
-        color: #d7d7d7;
-        border-radius: 4px;
-        height: 3rem;
-        display: flex;
-        align-items: center;
-        line-height: 3rem;
-    }
-
-        .nav-item a.active {
-            background-color: rgba(255,255,255,0.25);
-            color: white;
-        }
-
-        .nav-item a:hover {
-            background-color: rgba(255,255,255,0.1);
-            color: white;
-        }
-
-.content {
-    padding-top: 1.1rem;
+/* The index component container */
+.index-container {
+    display: grid;
+    grid-template-rows: auto auto 2em;
+    grid-template-columns: 2fr 2fr 1fr;
+    grid-column-gap: 1em;
+    grid-row-gap: 1em;
+    grid-template-areas: 
+        "message message message"
+        "input input input"
+        "length-output area-output .";
 }
 
-.navbar-toggler {
-    background-color: rgba(255, 255, 255, 0.1);
+/* The standard look and feel for the autolist textarea */
+.autolist-textarea {
+    box-sizing: border-box;
+    font-family: 'Roboto Mono', monospace;
+    border-radius: 5px;
+    border: 1px solid lightgray;
+    padding: 0.25em 0.75em 0.25em 0.75em;
+    resize: none;
+    width: 100%;
 }
 
-@media (max-width: 767.98px) {
-    .main .top-row {
-        display: none;
-    }
+/* When the autolist text area is in focus */
+.autolist-textarea:focus {
+    border: 1px solid blue;
+    box-shadow: 1px 1px 5px 2px #8f8f8f;
 }
 
-@media (min-width: 768px) {
-    app {
-        flex-direction: row;
-    }
-
-    .sidebar {
-        width: 250px;
-        height: 100vh;
-        position: sticky;
-        top: 0;
-    }
-
-    .main .top-row {
-        position: sticky;
-        top: 0;
-    }
-
-    .main > div {
-        padding-left: 2rem !important;
-        padding-right: 1.5rem !important;
-    }
-
-    .navbar-toggler {
-        display: none;
-    }
-
-    .sidebar .collapse {
-        /* Never collapse the sidebar for wide screens */
-        display: block;
-    }
+/* Specific styles for the autolist-input area textarea */
+#input-area {
+    height: 15em;
+    resize: vertical;
 }
+
+
