--- a/src/AutoLazer.App/wwwroot/css/site.css
+++ b/src/AutoLazer.App/wwwroot/css/site.css
@@ -60,7 +60,7 @@ a {
     grid-template-areas: 
         "message message message"
         "input input input"
-        "length-output area-output ."
+        "length-output area-output download-button"
         "block-table block-table block-table";
 }
 
@@ -81,17 +81,19 @@ a {
     box-shadow: 1px 1px 5px 2px #8f8f8f;
 }
 
+/* Styling for the block table */
 .table {
     width: 100%;
     box-sizing: border-box;
     border-collapse: collapse;
     overflow-x: auto;
+    table-layout: fixed;
 }
-
+/* Styling for the block table headers */
 .table th {
-    background-color: #e0e0e0;
+    background-color: #f5f5f5;
 }
-
+/* Styling for the block table */
 .table tr, th, td {
     border: 1px solid black;
     padding: 0.1em 0.2em 0.1em 0.2em;
@@ -104,4 +106,9 @@ a {
     resize: vertical;
 }
 
-
+/* Download button style */
+.download-button {
+    font-family: inherit;
+    border: 1px solid lightgray;
+    border-radius: 5px;
+}
