Removing the about from the NavBar

--- a/src/AutoLazer.App/Components/Navbar/Navbar.cshtml
+++ b/src/AutoLazer.App/Components/Navbar/Navbar.cshtml
@@ -1,6 +1,5 @@
 <div class="navbar-container">
     <nav>
-        <a href="/">AutoList</a>
-        <a href="#">About</a>
+        <a href="/">AutoLazer</a>
     </nav>
 </div>
