Removing the NavBar

--- a/src/AutoLazer.App/Shared/MainLayout.cshtml
+++ b/src/AutoLazer.App/Shared/MainLayout.cshtml
@@ -2,7 +2,8 @@
 
 <div class="main-layout-container">
     <div style="grid-area: navbar">
-        <Navbar></Navbar>
+        <!-- Removing the Navbar for now -->
+        <!-- <Navbar></Navbar> -->
     </div>
 
     <div style="grid-area: body">
