--- a/src/AutoLazer.App/wwwroot/css/site.css
+++ b/src/AutoLazer.App/wwwroot/css/site.css
@@ -112,3 +112,10 @@ a {
     border: 1px solid lightgray;
     border-radius: 5px;
 }
+
+code {
+    font-family: 'Roboto Mono', monospace;
+    font-size: 80%;
+    color: red;
+    background-color: #f5f5f5;
+}
